syntax = "proto3";

package awakari.source.websocket;

option go_package = "./api/grpc";

import "google/protobuf/timestamp.proto";

service Service {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Read(ReadRequest) returns (ReadResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc List(ListRequest) returns (ListResponse);
}

message CreateRequest {
  string url = 1;
  string auth = 2;
  string groupId = 3;
  string userId = 4;
}

message CreateResponse {}

message ReadRequest {
  string url = 1;
}

message ReadResponse {
  string groupId = 1;
  string userId = 2;
  google.protobuf.Timestamp createdAt = 3;
}

message DeleteRequest {
  string url = 1;
  string groupId = 2;
  string userId = 3;
}

message DeleteResponse {
}

message ListRequest {
  uint32 limit = 1;
  string cursor = 2;
  Filter filter = 3;
  Order order = 4;
}

message Filter {
  string groupId = 1;
  string userId = 2;
  string pattern = 3;
}

enum Order {
  ASC = 0;
  DESC = 1;
}

message ListResponse {
  repeated string urls = 1;
}
